force-app/main/default/objects/Cloud_SalesAmount__c/Cloud_SalesAmount__c.object-meta.xml
<CustomObject>
    <description>Cloud SalesAmount object</description>
    <label>Cloud SalesAmount</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cloud SalesAmount</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>