force-app/main/default/objects/Cloud_SalesAmount__c/fields/DeliveryTeam__c.field-meta.xml
<CustomField>
    <fullName>DeliveryTeam__c</fullName>
    <label>DeliveryTeam</label>
    <length>100</length>
    <type>Text</type>
</CustomField>