force-app/main/default/objects/Cloud_SalesAmount__c/fields/OpporutnityCode__c.field-meta.xml
<CustomField>
    <fullName>OpporutnityCode__c</fullName>
    <label>OpporutnityCode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>